--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 /* Variables
 -----------------------------------------*/
 :root{
@@ -18,6 +19,7 @@
 
 /*typography */
 --font-family-primary:  'Poppins', sans-serif;
+--font-family-secondary: 'Bebas Neue', cursive;
 --fs-xs: 1.2rem;
 --fs-sm: 1.4rem;
 --fs-md: 1.6rem;
@@ -26,5 +28,155 @@
 --fs-xxl: 2.8rem;
 --fs-xxxl: 3.2rem;
 --fs-biggest: clamp(3.4rem, 5vw 6.5rem);
+  /* Width & Height*/
+  --width-container: 115rem;
+  --height-header: 10rem;
+    /* Box Shadow */
+    --shadow-primary: 0px 5px 50px -2px rgba(205, 208, 221, 0.3);
+    --shadow-nav: 0px 1px 10px rgba(0, 0, 0, 0.05);
+    --shadow-sidebar: -3px 5px 10px rgba(0, 0, 0, 0.05);
 }
 
+/* CSS Reset
+--------------------------------------------------------------*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  color: var(--color-title);
+  font-weight: var(--fw-bold);
+}
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+ul,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+main {
+  overflow: hidden;
+}
+
+body {
+  font-family: var(--font-family-primary);
+  font-size: var(--fs-md);
+  color: var(--color-text);
+  margin-top: var(--height-header);
+}
+
+.about__content{
+    width: 50%;
+    font-family: var(--font-family-secondary);
+}
+.about__img{width: 50%;}
+.headline{
+    font-family: var(--font-family-secondary);
+}
+.tagline{
+    font-family: var(--font-family-primary);
+}
+
+/* Reusable CSS Classes
+--------------------------------------------------------------*/
+.container {
+    width: 90%;
+    max-width: var(--width-container);
+    margin: auto;
+  }
+  
+  .section {
+    padding: 8rem 0;
+  }
+  
+  .section__header {
+    padding-bottom: 5rem;
+    text-align: center;
+  }
+  
+  .section__title {
+    font-size: var(--fs-xl);
+    margin-top: 1.5rem;
+  }
+  
+  .section__subtitle {
+    font-weight: var(--fw-medium);
+    font-size: var(--fs-sm);
+    color: var(--color-primary);
+  }
+  
+  .d-grid {
+    display: grid;
+    gap: 3rem;
+  }
+  
+  .btn {
+    display: inline-block;
+    padding: 2.5rem 4rem;
+    color: var(--color-white);
+    font-weight: var(--fw-medium);
+    transition: var(--transition);
+  }
+  
+  .btn--primary {
+    background-color: var(--color-primary);
+  }
+  
+  .btn--primary:hover {
+    background-color: var(--color-primary-light);
+  }
+
+/* headline tagline header title sub-title sub-title-desc home-img section-img section-desc 
+section-title section-content nav footer testimonials container card wrapper*/
+
+
+
+@media screen and (max-width: 968px) {
+   
+  }
+  
+@media screen and (max-width: 768px) {
+   
+  }
+  
+  @media screen and (min-width: 576px) {
+
+  }
+  
+  @media screen and (min-width: 768px) {
+   
+  }
+  
+  @media screen and (min-width: 968px) {
+  
+  }
+  
